@@ -55,6 +55,7 @@
     * 0461 emcvnx_raidgroups.list_luns: New check for EMC VNX storage system...
     * 0462 emcvnx_raidgroups.list_disks: New check for EMC VNX storage system...
     * 0463 emcvnx_raidgroups.capacity, emcvnx_raidgroups.capacity_contiguous: New Checks for EMC VNX Storage systems...
+    * 0570 fileinfo.groups: file groups now allow exclude patterns as well
     * 0103 FIX: services: Fixed bug with service inventory defined in main.mk...
     * 0299 FIX: borcade_mlx_fan: Prettified output, handling "other" state now
     * 0300 FIX: cisco_fru_power: Trying not to inventorize not plugged in FRUs...
@@ -154,8 +155,8 @@
     * 0425 FIX: Fix login loop bug in distributed environments with different auth secrets
     * 0117 FIX: Availability button is now visible for users without the right to edit views
     * 0431 FIX: LDAP: Fixed group syncrhonisation when nested group sync is enabled
-    * 0569 FIX: recurring updates of serial numbers of disabled ldap users fixed...
     * 0122 FIX: Multisite view editor not longer throwing a exception when loading views from other users
+    * 0569 FIX: recurring updates of serial numbers of disabled ldap users fixed...
 
     WATO:
     * 0308 Multisite can now set rotation view permissions for NagVis...
